# detectron2-to-openvino

./: .gitignore  CLAUDE.md  DETECTOR_ISSUES_EXPLAINED.md  README.md  app.js  detectron2-to-openvino.ipynb  devices.py  generate_yolo_nas_onnx.py  index.html  main.py  openvino_detector.py  pyproject.toml  requirements.txt  requirements_detectron2.txt  run.bat  run.sh  setup.py  ssdlite_mobiledet_openvino_detector.py  test.py  test_model.py  yolo_nas_openvino_detector.py
