[project]
name = "openvino-object-detection"
version = "0.1.0"
description = "Real-time object detection using OpenVINO and YOLO-NAS"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "openvino>=2023.0.0",
    "huggingface-hub>=0.16.0",
    "Pillow>=9.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
gpu = ["openvino-dev[gpu]"]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
detect = "openvino_detector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true