[project]
name = "detectron2-to-openvino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "openvino>=2025.2.0",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
